=== master

* Make mysql2 adapter handle invalid statement handles when closing prepared statements (jeremyevans)

* Add query_blocker extension, for blocking queries inside a block (jeremyevans)

* Support alter_table add_primary_key/add_unique_constraint :using_index option on PostgreSQL 9.1+ (jeremyevans)

* Add temporary names for internally defined anonymous classes and modules on Ruby 3.3+ (jeremyevans)

=== 5.88.0 (2025-01-01)

* Add subset_static_cache plugin for statically caching subsets of a model class (jeremyevans)

* Allow class-level dataset methods to be overridable and call super to get the default behavior (jeremyevans)

* Support column aliases with data types on PostgreSQL, useful for selecting from functions returning records (jeremyevans)

* Break ties in timestamp migrator version handling using lexicographic sort of rest of migration filename (jeremyevans)

* Fix strict_unused_block warnings when running specs on Ruby 3.4 (jeremyevans)

=== 5.87.0 (2024-12-01)

* Add pg_schema_caching extension, for reloading OIDs for custom types when loading cached schema (jeremyevans)

* Make Database#schema hashes include :comment field on MySQL and PostgreSQL (Bahanix) (#2248, #2249)

* Add inspect_pk plugin to make it easier to retrieve model instance based on inspect output (jeremyevans)

* Treat all Trilogy errors with error code 1205 as Sequel::DatabaseLockTimeout in the trilogy adapter (jeremyevans)

* Allow Data{base,set}#extension to not require files if the extension is already registered (jeremyevans) (#2246)

* Do not limit imports to 40 rows at a time if using pg_auto_parameterize extension with the no_auto_parameterize method (davekaro) (#2242)

=== 5.86.0 (2024-11-01)

* Support the :disable_dqs Database option in the sqlite adapter to disable treating double quoted values as strings (jeremyevans) (#2233)

* Have the subset_conditions plugin support where_all and where_any methods to combine existing subsets with AND or OR (jeremyevans)
