@@ -1,5 +1,7 @@
 === master
 
+* Support :avoid_connection_compare_by_identity Database option to work around bugs in other libraries or the ruby implementation (jeremyevans) 
+
 * Make mysql2 adapter handle invalid statement handles when closing prepared statements (jeremyevans)
 
 * Add query_blocker extension, for blocking queries inside a block (jeremyevans)
